added youtube endpoint and cache
